# 2022_09_07_New_phenotypic_dye_testing_CDoT_Broad

./: .gitmodules  Figures_Negcon_wrt_Controls_48and49.ipynb  Figures_Negcon_wrt_Controls_Poster.ipynb  NoiseRemoval.ipynb  Platemap.ipynb  calculate_map_trt_moa.ipynb  calculate_map_trt_moa.py  copairs.ipynb  copairs_Phalloidin400LS.ipynb  copairs_negcon_other_treatments.ipynb  copairs_negcon_wrt_controls.ipynb  copairs_negcon_wrt_controls_48and49.ipynb  environment_new.yml  figures_map_trt_moa.py  pipeline.org  planning.org  poster_data_generation.ipynb  poster_data_generation.py  poster_figs_generation.ipynb  poster_figs_generation.py  protocol.org  pyproject.toml
.dvc/: config
NoiseRemoval/: BR00122246_normalized_negcon_pc_Aggregate_result_NegconNorm_mAP_wrt_Controls.csv  BR00122246_normalized_negcon_pc_Aggregate_result_NegconNorm_mAP_wrt_Trmts.csv  BR00122246_normalized_negcon_pc_Result_NegconNorm_mAP_wrt_Controls.csv  BR00122246_normalized_negcon_pc_Result_NegconNorm_mAP_wrt_Trmts.csv  BR00122246_normalized_pc_Aggregate_result_Negcon_wrt_Controls.csv  BR00122246_normalized_pc_Aggregate_result_Negcon_wrt_Trmts.csv  BR00122246_normalized_pc_Aggregate_result_WholePlateNorm_mAP_wrt_Controls.csv  BR00122246_normalized_pc_Aggregate_result_WholePlateNorm_mAP_wrt_Trmts.csv  BR00122246_normalized_pc_Result_Negcon_wrt_Controls.csv  BR00122246_normalized_pc_Result_Negcon_wrt_Trmts.csv  BR00122246_normalized_pc_Result_WholePlateNorm_mAP_wrt_Controls.csv  BR00122246_normalized_pc_Result_WholePlateNorm_mAP_wrt_Trmts.csv  BR00122247_normalized_pc_Result_Negcon_wrt_Controls.csv  (+47 more)
(+109 files in other folders)
